--- a/style/style.css
+++ b/style/style.css
@@ -30,6 +30,9 @@
     font-size: 18px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
 
 /* Nav styles */
 nav{
@@ -99,19 +102,36 @@ main{
     width: 1140px;
     margin: 0 auto;
 }
-
+main section{
+    margin-top: 120px;
+    margin-bottom: 120px;
+}
 /* about */
 .about{
     border-radius: 15px;
     padding: 130px 155px;
     text-align: center;
-    margin-top: 120px;
+   
 }
 .about-items{
     display: flex;
     justify-content: space-around;
+    margin-top: 5px;
     
 }
 .items-dis{
     font-weight: bold;
+   
+}
+/* section-2 */
+.skill-father{
+    display: flex;
+    justify-content: space-around;
+    gap: 24px;
+    
+}
+.skills{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 5px 50px 0px rgb(150, 160, 95) ;
 }
