My frist project webside

--- a/style/style.css
+++ b/style/style.css
@@ -162,6 +162,7 @@ main section{
     font-weight: bold;
     color: #474747;
     margin-bottom: 80px;
+    background-color: antiquewhite;
 }
 .resume hr{
     margin: 30px 5px;
