--- a/style/style.css
+++ b/style/style.css
@@ -4,12 +4,16 @@
     background-repeat: no-repeat;
     background-position: top left, bottom right;
 }
+/* body{
+    margin: 0 auto;
+} */
 .open-sans-normal {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
   font-variation-settings:
-    "wdth" 100;
+    "width" 100;
+   
 }
 
 /* share-style */
@@ -70,7 +74,12 @@ nav ul li a {
    border-radius: 11px;
    font-size: 20px;
    border: none;
-
+   text-decoration: none;
+   color: aliceblue;
+}
+#ididid {
+    text-decoration: none;
+    color: #eee8fc;
 }
 .mt-ditals{
     text-align: justify;
